--- a/package.json
+++ b/package.json
@@ -36,15 +36,21 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "history": "^1.11.0",
     "html-loader": "^0.3.0",
+    "key-mirror": "^1.0.0",
     "lodash": "^3.10.1",
     "markdown-loader": "^0.1.7",
     "normalize.css": "^3.0.3",
-    "react": "^0.13.3",
+    "react": "^0.14.0-rc1",
     "react-css-modules": "^3.2.3",
+    "react-dom": "^0.14.0-rc1",
+    "react-redux": "^3.0.1",
     "react-router": "^1.0.0-rc1",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.0",
     "redbox-react": "^1.1.0",
+    "redux": "^3.0.2",
+    "redux-devtools": "^2.1.5",
+    "redux-thunk": "^1.0.0",
     "style-loader": "^0.12.4",
     "stylus-loader": "^1.3.0",
     "webpack": "^1.12.2",
