--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,20 @@
 {
   "stage": 0,
-  "plugins": [
-    "react-transform"
-  ],
-  "extra": {
-    "react-transform": {
-      "transforms": [{
-      "transform": "react-transform-hmr",
-      "imports": ["react"],
-      "locals": ["module"]
-    }, {
-      "transform": "react-transform-catch-errors",
-      "imports": ["react", "redbox-react"],
-      "locals": ["module"]
-    }]
+  "env": {
+    "development": {
+      "plugins": ["react-transform"],
+      "extra": {
+        "react-transform": {
+          "transforms": [{
+            "transform": "react-transform-hmr",
+            "imports": ["react"],
+            "locals": ["module"]
+          }, {
+            "transform": "react-transform-catch-errors",
+            "imports": ["react", "redbox-react"]
+          }]
+        }
+      }
     }
   }
 }
