--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "redux-boilerplate",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "description": "yet another redux boilerplate",
   "main": "index.js",
   "scripts": {
-    "dev": "babel-node .",
+    "dev": "webpack-dev-server --hot --content-base ./build --inline --history-api-fallback --config ./webpack/dev.config.babel.js",
+    "build": "rm -rf ./build/assets && rm -rf ./build/css && rm -rf ./build/js && NODE_ENV=production webpack --inline --config ./webpack/prod.config.babel.js",
     "test": "npm test"
   },
   "repository": {
@@ -36,10 +37,12 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "history": "^1.11.0",
     "html-loader": "^0.3.0",
+    "immutable": "^3.7.5",
+    "isomorphic-fetch": "^2.1.1",
     "key-mirror": "^1.0.0",
     "lodash": "^3.10.1",
-    "markdown-loader": "^0.1.7",
     "normalize.css": "^3.0.3",
+    "postcss-loader": "^0.7.0",
     "react": "^0.14.0-rc1",
     "react-css-modules": "^3.2.3",
     "react-dom": "^0.14.0-rc1",
@@ -50,11 +53,13 @@
     "redbox-react": "^1.1.0",
     "redux": "^3.0.2",
     "redux-devtools": "^2.1.5",
+    "redux-logger": "^2.0.4",
     "redux-thunk": "^1.0.0",
     "style-loader": "^0.12.4",
     "stylus-loader": "^1.3.0",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
+    "webpack-dev-server": "^1.12.1",
     "webpack-hot-middleware": "^2.2.0"
   }
 }
